# simple-gl-evdev

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bad_glyph_packer.c  bad_glyph_packer.h  example1.c  myy.c  packed_fonts_parser.c  packed_fonts_parser.h  test-bgp.c
shaders/: cursor.fsh  cursor.vsh  sdf.frag  sdf.vert  standard.frag  standard.vert  text.frag  text.vert
src/: drm.c  evdev.c  machin.h  main.c  myy.c  myy.h  myy_drm.h  myy_evdev.h  text.c  text.h
src/current/: opengl.h
src/helpers/: file.c  file.h  gl_loaders.c  gl_loaders.h  log.h  matrices.h  packed_fonts_parser.c  packed_fonts_parser.h  string.h  strings.h  struct.h
src/helpers/file/: file.c
src/helpers/myy_vector/: da_c_template.h  da_cxx_template.h  vector.c  vector.h
src/helpers/opengl/: loaders.c  loaders.h  quads_structures.h
textures/: convert.rb  cursor.raw  fonts.raw  fonts_bitmap.myyraw  myy-color.rb  super_bitmap.raw
tools/: font-packer.c
